tests/toylang/neg/001468_mutation.toylang
program a = { var a : var; } .
